fix distorted image issue

--- a/src/components/product/index.css
+++ b/src/components/product/index.css
@@ -1,34 +1,47 @@
 .card-holder {
-  width: 94%;
-  min-width: 350px;
-  max-width: 350px;
-  height: 414px;
+  width: 350px;
+  max-width: 450px;
+  height: max-content;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding: 16px;
   margin: 10px 0;
-  background: #ffffff;
+  background: white;
 }
 .card-holder:hover {
   box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.19);
 }
+.product-gallery {
+  flex: 65%;
+  gap: 40px;
+  display: flex;
+  height: 100%;
+}
+
+.product-images div {
+  width: 120px;
+  height: auto;
+
+  margin-bottom: 10px;
+}
 .card-holder:hover .icon-cart-holder {
   display: block;
 }
-
-.card-image {
+.main-image {
   width: 100%;
-  height: 370px;
+  display: grid;
+  justify-content: center;
+}
+.image-wrapper img {
+  width: 100%;
+  height: 100%;
+}
+.card-image {
   border: none;
   display: grid;
   place-items: center;
   overflow: hidden;
-  transition: all 0.2s ease-in-out;
-}
-.card-image img {
-  width: 100%;
-  background-color: transparent;
 }
 .icon-cart-holder {
   position: relative;
